--- a/Efremov_Slides.tex
+++ b/Efremov_Slides.tex
@@ -274,7 +274,7 @@
 	\begin{itemize}
 		\item Возможность сэкономить около 80\% трудового ресурса аналитиков
 		\item Стоимость внедрения решения не превышает 5 млн. руб. при существовании возможности масштабирования
-		\item Стоимость обслуживания около 1 млн. ежегодно с учетом всего жизненного цикла
+		\item Стоимость обслуживания около 2 млн. руб. ежегодно с учетом всего жизненного цикла
 	\end{itemize}
 	
 \end{block}
