--- a/mylib.bib
+++ b/mylib.bib
@@ -1,197 +1,11 @@
 % Encoding: UTF-8
 
-@article{Daugman,
-	title={How iris recognition works},
-	author={J. Daugman},
-	journal={IEEE Trans. Circuits Syst. Video Techn.},
-	year={2004},
-	volume={14},
-	pages={21--30}
-}
-
-
-@article{Daugman2,
-	author  = {J. Daugman},
-	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-	title   = {High confidence visual recognition of persons by a test of statistical independence},
-	year={1993},
-	volume={15},
-	number={11},
-	pages={1148--1161}
-}
-
-@Article{Daugman4,
-
-	title={The importance of being random: statistical principles of iris recognition},
-	author={J. Daugman},
-	journal={Pattern Recognit.},
-	year={2003},
-	volume={36},
-	pages={279--291}
-}
-
-@Article{Adam_1,
-	author  = {M. Adam and F. Rossant and others},
-	journal = {Advanced Concepts for Intelligent Vision Systems Conference Proceedings},
-	title   = {Reliable eyelid localization for iris
-	identification},
-	year    = {2008},
-	pages = {1062--1070}
-}
-
-@Article{Matv,
-	author  = {{Соломатин И.А.} and {Матвеев И.А.} and {Новик В.П.}},
-	journal = {Автоматика и телемеханика},
-	title   = {Определение видимой области радужки классификатором текстур с опорным множеством},
-	year    = {2018},
-	vol = {3},
-	pages = {127--143}
-}
-
-@Article{Min,
-  author    = {T. Min and R. Park},
-  journal   = {Conference (International) on Image Processings Proceedings},
-  title = {Comparison of eyelid and eyelash detection algorithms for performance
-  improvement of iris recognition},
-  year      = {2008},
-  pages = {257--260},
-}
-
-@Article{Wildes,
-  author    = {R. Wildes},
-  journal   = {Proceedings of the {IEEE}},
-  title     = {Iris recognition: an emerging biometric technology},
-  year      = {1997},
-  number    = {9},
-  pages     = {1348--1363},
-  volume    = {85}
-}
-
-@Article{KKX,
-  author    = {Z. Xiangde and W. Qi and others},
-  journal = {Chinese Control and Decision Conference Proceedings},
-  title     = {Noise detection of iris image based on texture analysis},
-  year      = {2009},
-  pages = {2366--2370}
-}
-
-@Article{Masek,
-	author  = {L. Masek},
-	journal = {Measurement},
-	title   = {Recognition of human iris patterns for biometric identification},
-	year    = {2003},
-	volume = {32},
-	number = {8},
-	pages = {1502--1516}
-}
-
-@Article{KP,
-  author    = {B. Kang and K. Park},
-  journal   = {Pattern Recognition Letters},
-  title     = {A robust eyelash detection based on iris focus assessment},
-  year      = {2007},
-  number    = {13},
-  pages     = {1630--1639},
-  volume    = {28}
-}
-
-@Article{Adam_2,
-	author  = {M. Adam and F. Rossant and others},
-	journal = {Radioengineering},
-	title   = {Eyelid localization for iris identification},
-	year    = {2008},
-	volume={17},
-	number={4},
-	pages={82--85}
-}
-
-@Article{Yang,
-	author  = {L. Yang and T. Wu and others},
-	journal = {Conference (International) on Computer Design and Applications Proceedings},
-	title   = {Eyelid localization using asymmetric canny operator},
-	year    = {2010},
-	pages     = {533--535}
-}
-
-@Article{Smirn,
-	author  = {{Смирнов Д.А.} and {Матвеев И.А.}},
-	journal = {Труды ИСА РАН, Динамика неоднородных систем},
-	title   = {Определение границ век на изображении глаза методом активных контуров},
-	year    = {2006},
-	volume = {25},  
-	pages = {200--207}
-}
-
-@Article{Medic,
-	author  = {{Вельховер Е.С.} and {Шульпина Н.Б.} and {Алиева З.А. и др.}},
-	journal = {М.: Медицина},
-	title   = {Иридодиагностика},
-	year    = {1988},
-	pages = {240}
-}
-
-@MISC{Tech,
-	title = {Multiple Biometric Grand Challenge // http://www.nist.gov/itl/iad/ig/mbgc.cfm},
-	year    = {2007}
-}
-
-@MISC{Terr,
-	title = {Multiple Biometric Evaluation // http://www.nist.gov/itl/iad/ig/mbe.cfm},
-	year    = {2009}
-}
-
-@MISC{Conf3,
-	title = {Future Challenges based on the Multiple Biometric Grand Challenge // {NIST}
-	Information Access Division: Multiple Biometric Grand Challenge},
-	year    = {2010}
-}
-
-@Article{Canny,
-  author     = {J. Canny},
-  journal    = {IEEE Trans. Pattern Anal. Mach. Intell.},
-  title      = {A Computational Approach to Edge Detection},
-  year       = {1986},
-  number     = {6},
-  pages      = {679--698},
-  volume     = {8},
-}
-
-@Article{Inter,
-  author  = {{Дьяконов В.П.}},
-  journal = {М.: Наука},
-  title   = {Справочник по алгоритмам и программам на языке бейсик для персональных ЭВМ},
-  year    = {1987}
-}
-
-@Article{Radon,
-	author  = {S. Deans},
-	journal = {New York: John Wiley and Sons},
-	title   = {The Radon Transform and Some of Its Applications},
-	year    = {1983}
-}
-
-@Article{Hough_Parab,
-	author  = {D. Ballard},
-	journal = {Pattern Recognition},
-	title   = {Generalizing the Hough transform to detect arbitrary shapes},
-	year    = {1981},
-	volume = {13},
-	number = {2},
-	pages = {111--122}
-}
-
-@Article{GV,
-	author  = {{Гонсалес Р.} and {Вудс Р.}},
-	journal = {Техносфера},
-	title   = {Цифровая обработка изображений},
-	year    = {2012}
-}
-
 @Article{Nikon,
 	author  = {{Никонова И.А.}},
 	journal = {Альпина паблишер},
 	title   = {Проектный анализ и проектное финансирование},
-	year    = {2012}
+	year    = {2012},
+	language = {russian}
 }
 
 @article{Antonov2014,
@@ -200,5 +14,186 @@
 	title={Управление рисками приоритетных инвестиционных проектов концепция и методология},
 	year = {2014}
 }
+
+@article{Chusa,
+	author={{Чусавитина Г.Н.} and {Макашова В.Н.}},
+	journal = {Общество с ограниченной ответственностью ФЛИНТА},
+	title={Управление проектами по разработке и внедрению информационных систем},
+	year = {2014}
+}
+
+@article{Asso,
+	author={{Ассоциация банков России}},
+	journal = {Аналитические материалы},
+	title={Финансирование жилищного
+	строительства в рамках достижения национальных целей
+	развития до 2030 года},
+	year = {2020}
+}
+
+@MISC{Minstr,
+	title = {Мониторинг объема жилищного строительства | Минстрой России // https://minstroyrf.gov.ru/trades/zhilishnaya-politika/8/}
+}
+
+@MISC{domrf,
+	title = {Единая информационная система жилищного строительства // https://наш.дом.рф/ }
+}
+
+@MISC{cb,
+	title = {Центральный банк Российской Федерации | Банк России // https://cbr.ru/ }
+}
+
+@MISC{erz,
+	title = {Единый ресурс застройщиков // https://erzrf.ru/}
+}
+
+@article{stroyStat,
+	author={{Кенчадзе Д.Д.} and {Власенко Н.А., Денисов Л.В., Дехтяр Е.Е.,Ершкова Л.Г.,
+	Золотова И.Б.,Кириченко И.А., Колесникова В.Г.,
+	Корниенко О.В., Куранов Г.О., Фадеева В.В.}},
+	journal = {Федеральная служба государственной статистики (Росстат)},
+	title={Строительство в России. 2020},
+	year = {2020}
+}
+
+@article{Filli,
+	author={{Филлипс Дж.}},
+	journal = {ЛОРИ},
+	title={Управление проектами в области информационных технологий},
+	year = {2006}
+}
+
+@article{Fatrell,
+	author={{Фатрелл Р.} and {Шафер Д.} and {Шафер Л.}},
+	journal = {М.: Вильямс},
+	title={Управление программными проектами. Достижение оптимального качества при минимуме затрат},
+	pages={23--36},
+	year = {2003}
+}
+
+@article{Hiefez,
+	author={{Хейфец Е.Е.}},
+	journal = {Российский экономический интернет-журнал},
+	title={Анализ источников и механизмов финансирования девелоперских проектов жилищного строительства},
+	number={4},
+	pages={56},
+	year={2020}
+}
+
+@article{JBarron,
+	author={{Jonathan T. Barron}},
+	journal = {Google Research},
+	title={A general and adaptive robust loss function},
+	year = {2019}
+}
+
+@article{YNesterov,
+	author={Y. Nesterov},
+	journal = { SpringerVerlag US 2004},
+	title={ Introductory Lectures on Convex Optimization},
+	year = {2004}
+}
+
+@article{RobbinsMonro,
+	author={H. Robbins and S. Monro},
+	journal = { Annals of
+	Mathematical Statistics},
+	title={ A stochastic approximation method},
+	year = {1951}
+}
+
+@article{Schmidt,
+	author={M. Schmidt and N. Le Roux and F. Bach},
+	journal = {Mathematical Programming},
+	title={Minimizing finite sums with the stochastic
+	average gradient},
+	year = {2013}
+}
+
+@article{Jaderberg,
+	author={M. Jaderberg},
+	journal = {International conference on machine learning},
+	title={Decoupled Neural Interfaces using Synthetic Gradients},
+	pages={1627--1635},
+	year = {2017}
+}
+
+@article{Mohri,
+	author={M. Mohri and A. Rostamizadeh and A. Talwalkar},
+	journal = {MIT Press},
+	title={Foundations of Machine Learning},
+	year = {2012}
+}
+
+@article{Hastie,
+	author={T. Hastie and R. Tibshirani and J. Friedman},
+	journal = {MIT Press},
+	title={The elements of statistical learning: data mining, inference, and prediction},
+	volume={2},
+	year={2009}
+}
+
+@article{Friedman1,
+	author={J. Friedman},
+	journal = {Annals of statistics},
+	title={Greedy function approximation: a gradient boosting machine},
+	pages={1189--1232},
+	year={2001}
+}
+
+@article{Friedman2,
+	author={J. Friedman},
+	journal = {Computational statistics \& data analysis},
+	title={ Stochastic Gradient Boosting},
+	volume={38},
+	number={4},
+	pages={367--378},
+	year={2002}
+}
+
+@article{Karp,
+	author={A. Gulin and P. Karpovich},
+	journal = {Lection on the RuSSIR 2009 conference},
+	title={Greedy function optimization in learning to rank},
+	year={2009}
+}
+
+@article{Chen,
+	author={T. Chen and C. Guestrin},
+	journal = {Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining},
+	title={Xgboost: A scalable tree boosting system},
+	year={2016}
+}
+
+@article{Chen2,
+	author={C. Chen and Q. Zhang and others},
+	journal = {Chemometrics and Intelligent Laboratory Systems},
+	title={{LightGBM-PPI}: Predicting protein-protein interactions through {LightGBM} with multi-information fusion},
+	volume={191},
+	pages={54--64},
+	year={2019}
+}
+
+@article{yus,
+	author={A. Yusupova and N. Pavlidis and E. Pavlidis},
+	journal = {arXiv preprint arXiv:1912.04661},
+	title={Adaptive dynamic model averaging with an application to house price forecasting},
+	year = {2019}
+}
+
+@article{liu,
+	author={H. Liu},
+	journal = {arXiv preprint arXiv:2001.01641},
+	title={Housing Investment, Stock Market Participation and Household Portfolio choice: Evidence from China's Urban Areas},
+	year = {2020}
+}
+
+@article{Kerzner,
+	author={H. Kerzner},
+	journal = {John Wiley \& Sons},
+	title={Project management: a systems approach to planning, scheduling, and controlling},
+	year={2017}
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
