--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -159,7 +159,7 @@ top=2cm,bottom=2cm]{geometry}
 
 \subsection{Эффективность мониторинга}
 
-Построением эффективных систем мониторинга занимались многие исследователи: Дж.Филлипс, Р.Фатрелл, Х.Керцнер \cite{Filli, Fatrell, Hastie},~--- каждый из которых внес собственный вклад в формирование современной системы мониторинга. Так, на сегодняшний день, он представляет собой одну из функций проектного управления, включающую в себя сбор, анализ и трансляцию информации о нюансах хода реализации проекта, позволяющей, при необходимости, разработать комплекс мер по минимизации рисков и предотвращению незапланированных процессов.
+Построением эффективных систем мониторинга занимались многие исследователи: Дж.Филлипс, Р.Фатрелл, Х.Керцнер \cite{Filli, Fatrell, Kerzner},~--- каждый из которых внес собственный вклад в формирование современной системы мониторинга. Так, на сегодняшний день, он представляет собой одну из функций проектного управления, включающую в себя сбор, анализ и трансляцию информации о нюансах хода реализации проекта, позволяющей, при необходимости, разработать комплекс мер по минимизации рисков и предотвращению незапланированных процессов.
 
 Отметим, что таким образом, мониторинг позволяет решать задачи по отслеживанию основных индикаторов проекта, организации процесса обработки собранной информации, в том числе с целью последующего формирования отчетности по проекту, а также интегрировать функции мониторинга в информационную архитектуру реализующего проект предприятия.
 
