--- a/mylib.bib
+++ b/mylib.bib
@@ -1,7 +1,9 @@
 % Encoding: UTF-8
 
+@preamble{ "\providecommand\noopsort[1]{}" }
+
 @Article{Nikon,
-	author  = {{Никонова И.А.}},
+	author  = {\noopsort{1}{Никонова И.А.}},
 	journal = {Альпина паблишер},
 	title   = {Проектный анализ и проектное финансирование},
 	year    = {2012},
@@ -9,190 +11,215 @@
 }
 
 @article{Antonov2014,
-	author={{Антонов В.Г.} and {Масленников В.В.} and {Скамай Л.Г., Вачегин А.М.}},
+	author={\noopsort{1}{Антонов В.Г.} and {Масленников В.В.} and {Скамай Л.Г., Вачегин А.М.}},
 	journal = {Палеотип},
 	title={Управление рисками приоритетных инвестиционных проектов концепция и методология},
-	year = {2014}
+	year = {2014},
+	language = {russian}
 }
 
 @article{Chusa,
-	author={{Чусавитина Г.Н.} and {Макашова В.Н.}},
+	author={\noopsort{1}{Чусавитина Г.Н.} and {Макашова В.Н.}},
 	journal = {Общество с ограниченной ответственностью ФЛИНТА},
 	title={Управление проектами по разработке и внедрению информационных систем},
-	year = {2014}
+	year = {2014},
+	language = {russian}
 }
 
 @article{Asso,
-	author={{Ассоциация банков России}},
+	author={\noopsort{1}{Ассоциация банков России}},
 	journal = {Аналитические материалы},
 	title={Финансирование жилищного
 	строительства в рамках достижения национальных целей
 	развития до 2030 года},
-	year = {2020}
+	year = {2020},
+	language = {russian}
 }
 
 @MISC{Minstr,
-	title = {Мониторинг объема жилищного строительства | Минстрой России // https://minstroyrf.gov.ru/trades/zhilishnaya-politika/8/}
+	title = {\noopsort{1}Мониторинг объема жилищного строительства | Минстрой России // https://minstroyrf.gov.ru/trades/zhilishnaya-politika/8/},
+	language = {russian}
 }
 
 @MISC{domrf,
-	title = {Единая информационная система жилищного строительства // https://наш.дом.рф/ }
+	title = {\noopsort{1}Единая информационная система жилищного строительства // https://наш.дом.рф/ },
+	language = {russian}
 }
 
 @MISC{cb,
-	title = {Центральный банк Российской Федерации | Банк России // https://cbr.ru/ }
+	title = {\noopsort{1}Центральный банк Российской Федерации | Банк России // https://cbr.ru/ },
+	language = {russian}
 }
 
 @MISC{erz,
-	title = {Единый ресурс застройщиков // https://erzrf.ru/}
+	title = {\noopsort{1}Единый ресурс застройщиков // https://erzrf.ru/},
+	language = {russian}
 }
 
 @article{stroyStat,
-	author={{Кенчадзе Д.Д.} and {Власенко Н.А., Денисов Л.В., Дехтяр Е.Е.,Ершкова Л.Г.,
+	author={\noopsort{1}{Кенчадзе Д.Д.} and {Власенко Н.А., Денисов Л.В., Дехтяр Е.Е.,Ершкова Л.Г.,
 	Золотова И.Б.,Кириченко И.А., Колесникова В.Г.,
 	Корниенко О.В., Куранов Г.О., Фадеева В.В.}},
 	journal = {Федеральная служба государственной статистики (Росстат)},
 	title={Строительство в России. 2020},
-	year = {2020}
+	year = {2020},
+	language = {russian}
 }
 
 @article{Filli,
-	author={{Филлипс Дж.}},
+	author={\noopsort{1}{Филлипс Дж.}},
 	journal = {ЛОРИ},
 	title={Управление проектами в области информационных технологий},
-	year = {2006}
+	year = {2006},
+	language = {russian}
 }
 
 @article{Fatrell,
-	author={{Фатрелл Р.} and {Шафер Д.} and {Шафер Л.}},
+	author={\noopsort{1}{Фатрелл Р.} and {Шафер Д.} and {Шафер Л.}},
 	journal = {М.: Вильямс},
 	title={Управление программными проектами. Достижение оптимального качества при минимуме затрат},
 	pages={23--36},
-	year = {2003}
+	year = {2003},
+	language = {russian}
 }
 
 @article{Hiefez,
-	author={{Хейфец Е.Е.}},
+	author={\noopsort{1}{Хейфец Е.Е.}},
 	journal = {Российский экономический интернет-журнал},
 	title={Анализ источников и механизмов финансирования девелоперских проектов жилищного строительства},
 	number={4},
 	pages={56},
-	year={2020}
+	year={2020},
+	language = {russian}
 }
 
 @article{JBarron,
-	author={{Jonathan T. Barron}},
+	author={\noopsort{2}{Jonathan T. Barron}},
 	journal = {Google Research},
 	title={A general and adaptive robust loss function},
-	year = {2019}
+	year = {2019},
+	language = {english}
 }
 
 @article{YNesterov,
-	author={Y. Nesterov},
+	author={\noopsort{2}{Nesterov Y.}},
 	journal = { SpringerVerlag US 2004},
 	title={ Introductory Lectures on Convex Optimization},
-	year = {2004}
+	year = {2004},
+	language = {english}
 }
 
 @article{RobbinsMonro,
-	author={H. Robbins and S. Monro},
+	author={\noopsort{2}{Robbins H.} and {Monro S.}},
 	journal = { Annals of
 	Mathematical Statistics},
 	title={ A stochastic approximation method},
-	year = {1951}
+	year = {1951},
+	language = {english}
 }
 
 @article{Schmidt,
-	author={M. Schmidt and N. Le Roux and F. Bach},
+	author={\noopsort{2}{Schmidt M.} and {Le Roux N.} and {Bach F.}},
 	journal = {Mathematical Programming},
 	title={Minimizing finite sums with the stochastic
 	average gradient},
-	year = {2013}
+	year = {2013},
+	language = {english}
 }
 
 @article{Jaderberg,
-	author={M. Jaderberg},
+	author={\noopsort{2}{Jaderberg M.}},
 	journal = {International conference on machine learning},
 	title={Decoupled Neural Interfaces using Synthetic Gradients},
 	pages={1627--1635},
-	year = {2017}
+	year = {2017},
+	language = {english}
 }
 
 @article{Mohri,
-	author={M. Mohri and A. Rostamizadeh and A. Talwalkar},
+	author={\noopsort{2}{Mohri M.} and {Rostamizadeh A.} and {Talwalkar A.}},
 	journal = {MIT Press},
 	title={Foundations of Machine Learning},
-	year = {2012}
+	year = {2012},
+	language = {english}
 }
 
 @article{Hastie,
-	author={T. Hastie and R. Tibshirani and J. Friedman},
+	author={\noopsort{2}{Hastie T.} and {Tibshirani R.} and {Friedman J.}},
 	journal = {MIT Press},
 	title={The elements of statistical learning: data mining, inference, and prediction},
 	volume={2},
-	year={2009}
+	year={2009},
+	language = {english}
 }
 
 @article{Friedman1,
-	author={J. Friedman},
+	author={\noopsort{2}{Friedman J.}},
 	journal = {Annals of statistics},
 	title={Greedy function approximation: a gradient boosting machine},
 	pages={1189--1232},
-	year={2001}
+	year={2001},
+	language = {english}
 }
 
 @article{Friedman2,
-	author={J. Friedman},
+	author={\noopsort{2}{Friedman J.}},
 	journal = {Computational statistics \& data analysis},
 	title={ Stochastic Gradient Boosting},
 	volume={38},
 	number={4},
 	pages={367--378},
-	year={2002}
+	year={2002},
+	language = {english}
 }
 
 @article{Karp,
-	author={A. Gulin and P. Karpovich},
+	author={\noopsort{2}{Gulin A.} and {Karpovich P.}},
 	journal = {Lection on the RuSSIR 2009 conference},
 	title={Greedy function optimization in learning to rank},
-	year={2009}
+	year={2009},
+	language = {english}
 }
 
 @article{Chen,
-	author={T. Chen and C. Guestrin},
+	author={\noopsort{2}{Chen T.} and {Guestrin C.}},
 	journal = {Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining},
 	title={Xgboost: A scalable tree boosting system},
-	year={2016}
+	year={2016},
+	language = {english}
 }
 
 @article{Chen2,
-	author={C. Chen and Q. Zhang and others},
+	author={\noopsort{2}{Chen C.} and {Zhang Q.} and others},
 	journal = {Chemometrics and Intelligent Laboratory Systems},
 	title={{LightGBM-PPI}: Predicting protein-protein interactions through {LightGBM} with multi-information fusion},
 	volume={191},
 	pages={54--64},
-	year={2019}
+	year={2019},
+	language = {english}
 }
 
 @article{yus,
-	author={A. Yusupova and N. Pavlidis and E. Pavlidis},
+	author={\noopsort{2}{Yusupova A.} and {Pavlidis N.} and {Pavlidis E.}},
 	journal = {arXiv preprint arXiv:1912.04661},
 	title={Adaptive dynamic model averaging with an application to house price forecasting},
-	year = {2019}
+	year = {2019},
+	language = {english}
 }
 
 @article{liu,
-	author={H. Liu},
+	author={\noopsort{2}{Liu H.}},
 	journal = {arXiv preprint arXiv:2001.01641},
 	title={Housing Investment, Stock Market Participation and Household Portfolio choice: Evidence from China's Urban Areas},
 	year = {2020}
 }
 
 @article{Kerzner,
-	author={H. Kerzner},
+	author={\noopsort{2}{Kerzner H.}},
 	journal = {John Wiley \& Sons},
 	title={Project management: a systems approach to planning, scheduling, and controlling},
-	year={2017}
+	year={2017},
+	language = {english}
 }
 
 
