--- a/mylib.bib
+++ b/mylib.bib
@@ -37,22 +37,22 @@
 }
 
 @MISC{Minstr,
-	title = {\noopsort{1}Мониторинг объема жилищного строительства | Минстрой России // https://minstroyrf.gov.ru/trades/zhilishnaya-politika/8/},
+	title = {\noopsort{1}Мониторинг объема жилищного строительства | Минстрой России [Электронный ресурс] // https://minstroyrf.gov.ru/trades/zhilishnaya-politika/8/},
 	language = {russian}
 }
 
 @MISC{domrf,
-	title = {\noopsort{1}Единая информационная система жилищного строительства // https://наш.дом.рф/ },
+	title = {\noopsort{1}Единая информационная система жилищного строительства [Электронный ресурс] // https://наш.дом.рф/ },
 	language = {russian}
 }
 
 @MISC{cb,
-	title = {\noopsort{1}Центральный банк Российской Федерации | Банк России // https://cbr.ru/ },
+	title = {\noopsort{1}Центральный банк Российской Федерации | Банк России [Электронный ресурс] // https://cbr.ru/ },
 	language = {russian}
 }
 
 @MISC{erz,
-	title = {\noopsort{1}Единый ресурс застройщиков // https://erzrf.ru/},
+	title = {\noopsort{1}Единый ресурс застройщиков [Электронный ресурс] // https://erzrf.ru/},
 	language = {russian}
 }
 
