--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -491,7 +491,7 @@ top=2cm,bottom=2cm]{geometry}
 	CV = \frac{1}{k}\sum\limits_{i=1}^{k}Q(a_i(x), X_i).
 \end{gather}
 
-Заметим, что в нашей задаче данные имеют структуру временного ряда, поэтому случайно их перемешивать будет некорректно. Решением этой проблемы может быть подход \textbf{time series cross validation}.
+Заметим, что в нашей задаче данные имеют структуру временного ряда, поэтому случайно их перемешивать будет некорректно. Решением этой проблемы может быть подход \textbf{time series cross-validation}.
 
 Суть метода заключается в том, что мы начинаем обучать модель на небольшом отрезке временного ряда от начала до некоторого $t$, затем делаем прогноз на $t+n$ и считаем ошибку. На следующем шаге расширяем обучающую выборку до $t+n$ и прогнозируем с $t+n$ до $t+2n$. Так мы продолжаем сдвигать тестовый отрезок ряда до тех пор пока не достигнем последнее доступное наблюдение. Схематически логику можно представить так (рис.~\ref{fig:tcross_val}). 
 
@@ -501,7 +501,7 @@ top=2cm,bottom=2cm]{geometry}
 	
 	\includegraphics[width=0.7\linewidth]{tcross_val.jpg}
 	
-	\caption{Кроссвалидация временного ряда}
+	\caption{Кросс-валидация временного ряда}
 	
 	\label{fig:tcross_val}
 	
@@ -808,7 +808,7 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 
 \textbf{Пороговая классификация.} Здесь, проверялась гипотеза о возможности разделить объекты недвижимости по уровню, а именно, за основу был взят признак $f$:
 \begin{gather}\label{pklas1}
-	a_i\leq \frac{p_j\cdot|R|}{\sum\limits_{k\in R} p_k}\leq a_{i+1},
+	a_i\leq \left(f =\frac{p_j\cdot|R|}{\sum\limits_{k\in R} p_k}\right)\leq a_{i+1},
 \end{gather}
 где $p_j$~--- актуальная стоимость строительства исследуемого объекта, $R$~--- все объекты жилищного строительства в регионе, $|R|$~--- количество этих объектов, а $a_i$~--- выведенные эмпирически пороговые значения. Таким образом, по сути объект строительства оценивается по отношению стоимости его строительства к стоимости среднего объекта стройки в регионе, и на основе пороговых значений этого признака происходит классификация. На (рис.~\ref{fig:porclas}) представлена визуализация значения признака оценки. Не трудно заметить, что точки можно удачно разделить на 4 группы. На основе данных были выбраны 3 пороговых значения по центрам отрезков крайних точек групп: $a_1 \approx 0,8; a_2 \approx 1,2; a_3 \approx 1,5$.
 
