--- a/Efremov_Slides.tex
+++ b/Efremov_Slides.tex
@@ -142,7 +142,7 @@
 \begin{frame}{Предобработка}
 	\begin{block}{Пороговая классификация}
 		$$
-		a_i\leq \frac{p_j\cdot|R|}{\sum\limits_{k\in R} p_k}\leq a_{i+1};~~~~~~~~ a_1 \approx 0,8; a_2 \approx 1,2; a_3 \approx 1,5.
+		a_i\leq \left(f =\frac{p_j\cdot|R|}{\sum\limits_{k\in R} p_k}\right)\leq a_{i+1},;~~~~~~~~ a_1 \approx 0,8; a_2 \approx 1,2; a_3 \approx 1,5.
 		$$
 	\end{block}
 	\begin{figure}[h]
@@ -191,6 +191,7 @@
 	$$
 	\sum\limits_{i=1}^{l}L(y_i, a_{N-1}(x_i)+\gamma_Nb_N(x_i)) \rightarrow \min_{b_N, \gamma_N}.
 	$$
+	
 \end{block}	
 \end{frame}
 %-----------------------------------------------------------------------------------------------------
@@ -243,6 +244,7 @@
 		\label{Tab:3}
 	\end{table}
 \end{frame}
+
 %-----------------------------------------------------------------------------------------------------
 
 \begin{frame}{Индикация проблем}	
@@ -261,6 +263,22 @@
 \end{frame}
 %-----------------------------------------------------------------------------------------------------
 
+\begin{frame}{Пример результата работы алгоритма}	
+	\begin{block}{Сравнение даты фактической готовности}
+		Плановый срок готовности объекта на начало года~--- конец 3~квартала 2022 года. 
+		Плановый прогнозный срок готовности объекта, предсказанный моделью,~--- второй квартал 2026 года.
+	\end{block}
+	
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.8\linewidth]{house.jpg}
+		\caption{Сравнение рендера и фото жилого дома “Виктория”}
+		\label{fig:{house}}
+	\end{figure}
+	
+\end{frame}
+%-----------------------------------------------------------------------------------------------------
+
 \begin{frame}{Экономический эффект}	
 	\begin{block}{Необходимость мониторинга}
 		\begin{itemize}
@@ -273,8 +291,8 @@
 \begin{block}{Плюсы автоматизации}
 	\begin{itemize}
 		\item Возможность сэкономить около 80\% трудового ресурса аналитиков
-		\item Стоимость внедрения решения не превышает 5 млн. руб. при существовании возможности масштабирования
-		\item Стоимость обслуживания около 2 млн. руб. ежегодно с учетом всего жизненного цикла
+		\item Стоимость внедрения решения не превышает 6 млн. руб. при существовании возможности масштабирования
+		\item Стоимость обслуживания около 4 млн. руб. ежегодно с учетом всего жизненного цикла
 	\end{itemize}
 	
 \end{block}
