--- a/mylib.bib
+++ b/mylib.bib
@@ -11,7 +11,7 @@
 }
 
 @article{Antonov2014,
-	author={\noopsort{1}{Антонов В.Г.} and {Масленников В.В.} and {Скамай Л.Г., Вачегин А.М.}},
+	author={\noopsort{1}{Антонов В.Г.} and {Масленников В.В. и др.},
 	journal = {Палеотип},
 	title={Управление рисками приоритетных инвестиционных проектов концепция и методология},
 	year = {2014},
@@ -57,9 +57,7 @@
 }
 
 @article{stroyStat,
-	author={\noopsort{1}{Кенчадзе Д.Д.} and {Власенко Н.А., Денисов Л.В., Дехтяр Е.Е.,Ершкова Л.Г.,
-	Золотова И.Б.,Кириченко И.А., Колесникова В.Г.,
-	Корниенко О.В., Куранов Г.О., Фадеева В.В.}},
+	author={\noopsort{1}{Кенчадзе Д.Д.} and {Власенко Н.А. и др.}},
 	journal = {Федеральная служба государственной статистики (Росстат)},
 	title={Строительство в России. 2020},
 	year = {2020},
