Last commit after passing ex.

--- a/Efremov_Slides.tex
+++ b/Efremov_Slides.tex
@@ -40,11 +40,11 @@
 \author{Ефремов Сергей}
 \date{06 июля 2022г.}
 \institute[МФТИ]{Московский физико-технический институт \\
-	Физтех-школа прикладной математики и информатики\\
+	Физтех-школа Прикладной Математики и Информатики\\
 	Кафедра технологий цифровой трансформации
 	\vspace{0.3cm} \\
 	Научный руководитель
-	канд. экон. наук, доц.  А\.,А.\,Помулев
+	канд. экон. наук, доц.  А.А.\,Помулев
 }
 
 \date{
@@ -150,7 +150,7 @@
 		%\includegraphics[width=1.02\textwidth]{experiment.pdf}
 		%\includegraphics[width=0.99\textwidth]{}
 		
-		\includegraphics[width=0.8\linewidth]{porclas.jpg}
+		\includegraphics[width=0.7\linewidth]{porclas.jpg}
 		\caption{Распределение значений признака $f$}
 		\label{fig:{porclas}}
 	\end{figure}
