--- a/mylib.bib
+++ b/mylib.bib
@@ -11,7 +11,7 @@
 }
 
 @article{Antonov2014,
-	author={\noopsort{1}{Антонов В.Г.} and {Масленников В.В. и др.},
+	author={\noopsort{1}{Антонов В.Г.} and {Масленников В.В. и др.}},
 	journal = {Палеотип},
 	title={Управление рисками приоритетных инвестиционных проектов концепция и методология},
 	year = {2014},
